# ai-lesson

./: .gitignore  go.mod  pyproject.toml
task1/: main.go
task1/graph/: edge.go  graph.go  node.go  tools.go
task2/: main.py  tree
task3/: func.go  main.go
task4/: main.py
task5/: main.py
task6/: main.py
